# rp-fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_rp-fastapi.yml
rp_fastapi/: app.py  blob.py  get.py  models.py  post.py  utils.py
tests/: test_app.py
