[tool.poetry]
name = "rp-fastapi"
version = "0.1.0"
description = ""
authors = ["Nandha Kumar <nandha95@gmail.com>"]
readme = "README.md"
packages = [{include = "rp_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
